appId: com.daria111.mobilefrontend
---
- clearState

- launchApp
- assertVisible: 'M-100 M-Building available'
- assertNotVisible: 'T-100 T-Building available'
- tapOn: 'M-100 M-Building available'
- assertVisible: 'Favorites'
- tapOn: 'Favorites'
- assertVisible: '🎵 Favorited'
- tapOn: '🎵 Favorited'
- assertVisible: 'Favorites'
- tapOn: 'Favorites'
- assertVisible: '🎵 Favorited'
- tapOn: 'Back'
- scrollUntilVisible:
    element: 'T-100 T-Building available'
- tapOn: 'T-100 T-Building available'
- assertVisible: 'Favorites'
- tapOn: 'Favorites'
- assertVisible: '🎵 Favorited'
- tapOn: 'Back'
- tapOn:
    point: "51%,27%"
- assertVisible: 'T-100 T-Building available'
- assertVisible: 'M-100 M-Building available'
- tapOn: 'M-100 M-Building available'
- tapOn: '🎵 Favorited'
- tapOn: 'Back'
- tapOn: 'T-100 T-Building available'
- tapOn: '🎵 Favorited'
- clearState
