appId: com.daria111.mobilefrontend
---
- launchApp
- assertVisible: 'M-100 M-Building available'
- assertNotVisible: 'T-100 T-Building available'
- tapOn:
    id: 'search-bar'
- inputText: 'T-100'
- assertVisible: 'T-100 T-Building available'
- tapOn: "clear"
- assertVisible: 'M-100 M-Building available'
- tapOn:
    id: 'search-bar'
- inputText: 'NonExistentRoom'
- assertVisible: 'No rooms found.'
- tapOn: "clear"
- assertVisible: 'M-100 M-Building available'
- assertNotVisible: 'T-100 T-Building available'
- scrollUntilVisible:
    element: 'T-100 T-Building available'
- clearState
