appId: com.daria111.mobilefrontend
---
- launchApp
- assertVisible: 'M-100 M-Building available'
- assertNotVisible: 'T-100 T-Building available'
- tapOn: 'M-100 M-Building available'
- assertVisible: 'Concert hall'
- tapOn: 'Back'
- scrollUntilVisible:
    element: 'T-100 T-Building available'
- tapOn: 'T-100 T-Building available'
- assertVisible: 'Classroom'
- tapOn: 'Back'
- tapOn: ' Type'
- tapOn: 'Search'
- inputText: 'classroom'
- hideKeyboard
- assertVisible: ' Classroom'
- longPressOn: ' Classroom'
- tapOn: 'Back'
- assertNotVisible: 'M-100 M-Building available'
- assertVisible: 'T-100 T-Building available'
- clearState
